add home to title

--- a/websrc/index.html
+++ b/websrc/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>DECO1800/7180 Artistocial</title>
+	<title>DECO1800/7180 Artistocial Home</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=JejuGothic&display=swap" rel="stylesheet" />
 </head>
