--- a/websrc/index.html
+++ b/websrc/index.html
@@ -15,8 +15,8 @@
 			<div class="v56_30">
 				<div class="v56_31">
 					<div class="v56_32">
-						<div class="v56_33"></div>
-						<div class="v56_34"></div>
+						<div class="libMain"></div>
+						<div class="libBot"></div>
 					</div><span class="v56_35">Library</span>
 				</div>
 			</div>
@@ -26,8 +26,10 @@
 				</div>
 				<div class="v56_40">
 					<div class="v56_41">
-						<div class="v56_42"></div>
-						<div class="v56_43"></div>
+
+						<div class="artColMain"></div>
+
+						<div class="artColBot"></div>
 					</div><span class="v56_44">Art Collection</span>
 				</div>
 			</div>
