--- a/websrc/index.html
+++ b/websrc/index.html
@@ -64,28 +64,24 @@
 					<div class="v56_67"></div>
 					<div class="v56_68"></div>
 					<div class="v56_69">
-						<div class="v56_70"></div>
+						<div class="face"></div>
 					</div>
-					<div class="v56_71">
-						<div class="v56_72">
-							<div class="v56_73"></div>
-							<div class="v56_74"></div>
+					<div class="stomach">
+						<div class="stoA">
+							<div class="stoB"></div>
+							<div class="stoC"></div>
 						</div>
-						<div class="v56_75"></div>
-						<div class="v56_76"></div>
-						<div class="v56_77"></div>
-						<div class="v56_78"></div>
+						<div class="stoD"></div>
 					</div>
-					<div class="v56_79"></div>
-					<div class="v56_80"></div>
-					<div class="v56_81"></div>
-					<div class="v56_82"></div>
-					<div class="v56_83"></div>
-					<div class="v56_84"></div>
+					<div class="leftEye"></div>
+					<div class="rightEye"></div>
+
+					<div class="leftHand"></div>
+					<div class="rightHand"></div>
 				</div>
 			</div>
 
-			<div class="entraBack"></div><span class="entraText">GAME ENTRANCE</span>
+			<div class="entraBack"></div><a href="artgallery/fronpage.html" class="entraText">GAME ENTRANCE</a>
 		</div><span class="loDes">Play, Explore, and Make Friends</span>
 		<div class="v56_158">
 			<div class="v56_159"></div>
@@ -116,7 +112,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="v56_181"><span class="v56_182">SIGN IN/ UP</span></div>
+		<div class="loginDiv"><a href="login.html" class="loginBut">SIGN IN/ UP</a></div>
 		<div class="name"></div>
 	</div>
 </body>
