--- a/websrc/login.html
+++ b/websrc/login.html
@@ -18,7 +18,7 @@
         <div class="v96_102"></div>
         <div class="v96_103"></div><span class="v96_104">Occupation:</span><span class="v96_109">Last Name:</span>
         <div class="v96_106"></div><span class="v96_107">First Name:</span>
-        <span class="v84_828">SIGN UP</span><span class="v84_829">Continue</span>
+        <span class="v84_828">SIGN UP</span><a href="loginComplete.html" class="continue">Continue</a>
         <div class="v96_110">
             <div class="v96_111"></div>
             <div class="v96_112"></div>
@@ -1174,7 +1174,7 @@
         text-align: center;
     }
 
-    .v84_829 {
+    .continue {
         width: 146px;
         color: rgba(255, 255, 255, 1);
         position: absolute;
