--- a/websrc/loginComplete.html
+++ b/websrc/loginComplete.html
@@ -12,8 +12,8 @@
         </div>
         <div class="v150_5"></div>
         <div class="v150_6"></div>
-        <div class="v150_7"><span class="v150_8">Yes!! I am willing to!</span></div>
-        <div class="v150_9"><span class="v150_10">Sadly Turn Down :((((</span></div><span class="v150_81">SIGN UP
+        <div class="v150_7"><a href="artgallery/fronpage.html" class="v150_8">Yes!! I am willing to!</a></div>
+        <div class="v150_9"><a href="index.html" class="v150_10">Sadly Turn Down :((((</a></div><span class="v150_81">SIGN UP
             Complete!</span>
         <div class="v150_82">
             <div class="v150_83"></div>
