--- a/websrc/login.html
+++ b/websrc/login.html
@@ -26,9 +26,9 @@
             <div class="v96_114">
                 <div class="v96_115"></div>
             </div>
-            <div class="v96_116">
+            <div class="stomachLogin">
                 <div class="v96_117">
-                    <div class="v96_118"></div>
+                    <div class="stomachLoginTop"></div>
                 </div>
                 <div class="v96_119"></div>
                 <div class="v96_120"></div>
@@ -38,7 +38,7 @@
             <div class="v96_123"></div>
             <div class="v96_124"></div>
             <div class="v96_125"></div>
-            <div class="v96_126"></div>
+            <div class="rightHandLogin"></div>
             <div class="v96_132">
                 <div class="v96_129"><span class="v96_128">Nice to meet you!</span></div>
                 <div class="name"></div>
@@ -1259,7 +1259,7 @@
         overflow: hidden;
     }
 
-    .v96_116 {
+    .stomachLogin {
         width: 112px;
         height: 155px;
         background: url("../images/v96_116.png");
@@ -1269,7 +1269,7 @@
         opacity: 1;
         position: absolute;
         top: 366px;
-        left: 245px;
+        left: 140px;
         transform: rotate(-180deg);
         overflow: hidden;
     }
@@ -1289,7 +1289,7 @@
         overflow: hidden;
     }
 
-    .v96_118 {
+    .stomachLoginTop {
         width: 112px;
         height: 93px;
         background: rgba(255, 255, 255, 1);
@@ -1378,7 +1378,7 @@
         opacity: 1;
         position: absolute;
         top: 336px;
-        left: 0px;
+        left: 35px;
         border-top-left-radius: 100px;
         border-top-right-radius: 100px;
         border-bottom-left-radius: 100px;
@@ -1387,14 +1387,14 @@
         overflow: hidden;
     }
 
-    .v96_126 {
+    .rightHandLogin {
         width: 39px;
         height: 109px;
         background: rgba(244, 206, 9, 1);
         opacity: 1;
         position: absolute;
-        top: 390px;
-        left: 283px;
+        top: 336px;
+        left: 305px;
         border-top-left-radius: 120px;
         border-top-right-radius: 120px;
         border-bottom-left-radius: 120px;
