--- a/websrc/loginComplete.html
+++ b/websrc/loginComplete.html
@@ -22,7 +22,7 @@
             <div class="v150_86">
                 <div class="v150_87"></div>
             </div>
-            <div class="v150_88">
+            <div class="stomachComplete">
                 <div class="v150_89">
                     <div class="v150_90"></div>
                 </div>
@@ -33,8 +33,8 @@
             </div>
             <div class="v150_95"></div>
             <div class="v150_96"></div>
-            <div class="v150_97"></div>
-            <div class="v150_98"></div>
+            <div class="leftHandCom"></div>
+            <div class="rightHandCom"></div>
         </div>
         <div class="v150_99">
             <div class="v150_100">
@@ -253,7 +253,7 @@
         overflow: hidden;
     }
 
-    .v150_88 {
+    .stomachComplete {
         width: 157px;
         height: 217px;
         background: url("../images/v150_88.png");
@@ -263,7 +263,7 @@
         opacity: 1;
         position: absolute;
         top: 350px;
-        left: 343px;
+        left: 200px;
         transform: rotate(-180deg);
         overflow: hidden;
     }
@@ -365,14 +365,14 @@
         border-radius: 50%;
     }
 
-    .v150_97 {
+    .leftHandCom {
         width: 54px;
         height: 153px;
         background: rgba(244, 206, 9, 1);
         opacity: 1;
         position: absolute;
-        top: 385px;
-        left: 27px;
+        top: 325px;
+        left: 47px;
         border-top-left-radius: 100px;
         border-top-right-radius: 100px;
         border-bottom-left-radius: 100px;
@@ -381,14 +381,14 @@
         overflow: hidden;
     }
 
-    .v150_98 {
+    .rightHandCom {
         width: 54px;
         height: 153px;
         background: rgba(244, 206, 9, 1);
         opacity: 1;
         position: absolute;
-        top: 281px;
-        left: 422px;
+        top: 251px;
+        left: 450px;
         border-top-left-radius: 100px;
         border-top-right-radius: 100px;
         border-bottom-left-radius: 100px;
