--- a/websrc/login.html
+++ b/websrc/login.html
@@ -12,12 +12,14 @@
         </div>
         <div class="v84_749"></div>
         <div class="v84_750"></div>
-        <div class="v84_751"></div>
-        <div class="v84_752"></div>
-        <div class="v84_754"></div><span class="v84_755">Password:</span><span class="v84_757">Email Address(ID):</span>
-        <div class="v96_102"></div>
-        <div class="v96_103"></div><span class="v96_104">Occupation:</span><span class="v96_109">Last Name:</span>
-        <div class="v96_106"></div><span class="v96_107">First Name:</span>
+        <input type="email" class="email"></div>
+        <input type="password" class="password"></div>
+        <div class="v84_754"></div><span class="v84_755">Password:</span>
+        <span class="v84_757">Email Address(ID):</span>
+        <input type="text" class="lastname"></div>
+        <input type="text" class="occupation"></div><span class="v96_104">Occupation:</span>
+        <span class="v96_109">Last Name:</span>
+        <input type="text" class="firstName"></div><span class="v96_107">First Name:</span>
         <span class="v84_828">SIGN UP</span><a href="loginComplete.html" class="continue">Continue</a>
         <div class="v96_110">
             <div class="v96_111"></div>
@@ -115,7 +117,7 @@
         overflow: hidden;
     }
 
-    .v84_751 {
+    .email {
         width: 430px;
         height: 59px;
         background: rgba(255, 255, 255, 1);
@@ -130,7 +132,7 @@
         overflow: hidden;
     }
 
-    .v84_752 {
+    .password {
         width: 430px;
         height: 59px;
         background: rgba(255, 255, 255, 1);
@@ -186,7 +188,7 @@
         text-align: center;
     }
 
-    .v96_102 {
+    .lastname {
         width: 430px;
         height: 59px;
         background: rgba(255, 255, 255, 1);
@@ -201,7 +203,7 @@
         overflow: hidden;
     }
 
-    .v96_103 {
+    .occupation {
         width: 430px;
         height: 59px;
         background: rgba(255, 255, 255, 1);
@@ -242,7 +244,7 @@
         text-align: right;
     }
 
-    .v96_106 {
+    .firstName {
         width: 430px;
         height: 59px;
         background: rgba(255, 255, 255, 1);
