--- a/websrc/index.html
+++ b/websrc/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-	
+	<div class="animation">
+		<div id="cartoonRight" class="cartoon">
+			<img src="images/cartoonleft.png" alt="cartoon turn right">
+		</div>
+		<div id="cartoonLeft" class="cartoon">
+			<img src="images/cartoonright.png" alt="cartoon turn right">
+		</div>
+	</div>
+
 	<div class="main_screen">
 		<img class="mainLogo" src="images/artistocial.png" height="200" width="500"></img>
 		<div class="lib_event">
