--- a/websrc/login.html
+++ b/websrc/login.html
@@ -20,7 +20,9 @@
         <input type="text" class="occupation"></div><span class="v96_104">Occupation:</span>
         <span class="v96_109">Last Name:</span>
         <input type="text" class="firstName"></div><span class="v96_107">First Name:</span>
-        <span class="v84_828">SIGN UP</span><a href="loginComplete.html" class="continue">Continue</a>
+        <span class="v84_828">SIGN UP</span>
+        <img class="loginLogo" src="images/artistocial.png">
+        <a href="loginComplete.html" class="continue">Continue</a>
         <div class="v96_110">
             <div class="v96_111"></div>
             <div class="v96_112"></div>
@@ -1174,6 +1176,21 @@
         font-size: 36px;
         opacity: 1;
         text-align: center;
+    }
+
+    .loginLogo {
+        height: 100px;
+        width: 300px;
+        color: rgba(0, 0, 0, 1);
+        position: absolute;
+        top: 25px;
+        left: 1180px;
+        font-family: JejuGothic;
+        font-weight: Regular;
+        font-size: 36px;
+        opacity: 1;
+        
+
     }
 
     .continue {
