--- a/websrc/loginComplete.html
+++ b/websrc/loginComplete.html
@@ -15,6 +15,7 @@
         <div class="v150_7"><a href="artgallery/fronpage.html" class="v150_8">Yes!! I am willing to!</a></div>
         <div class="v150_9"><a href="index.html" class="v150_10">Sadly Turn Down :((((</a></div><span class="v150_81">SIGN UP
             Complete!</span>
+            <img class="loginComLogo" src="images/artistocial.png">
         <div class="v150_82">
             <div class="v150_83"></div>
             <div class="v150_84"></div>
@@ -179,6 +180,20 @@
         font-size: 36px;
         opacity: 1;
         text-align: center;
+    }
+
+    .loginComLogo {
+
+        height: 100px;
+        width: 300px;
+        color: rgba(0, 0, 0, 1);
+        position: absolute;
+        top: 25px;
+        left: 1180px;
+        font-family: JejuGothic;
+        font-weight: Regular;
+        font-size: 36px;
+        opacity: 1;
     }
 
     .v150_82 {
