--- a/websrc/events.html
+++ b/websrc/events.html
@@ -13,7 +13,7 @@
 
     <iframe frameborder="no" scrolling="no" class="w-100-iframe top-iframe" src="layout/topTab.html"></iframe>
 
-    <div class="library-title background-color-FF3131">ART EVENTS IN BRISBANE </div>
+    <div style="padding-left: 4em" class="library-title background-color-FF3131">ART EVENTS IN BRISBANE </div>
     <div class="events-content events-tab-info">
         <div class="sort-text">sort by popular</div>
         <div class="w-1380 events-info flex-space-between">
