--- a/websrc/library.html
+++ b/websrc/library.html
@@ -12,7 +12,7 @@
 
     <iframe frameborder="no" scrolling="no" class="w-100-iframe top-iframe" src="layout/topTab.html"></iframe>
 
-    <div class="library-title background-color-139E06">LIBRARIES IN BRISBANE</div>
+    <div style="padding-left: 4em" class="library-title background-color-139E06">LIBRARIES IN BRISBANE</div>
 
     <div class="library-info">
         <div>THE LIBRARY MAP</div>
