change login and login complete

--- a/websrc/index.html
+++ b/websrc/index.html
@@ -68,7 +68,9 @@
     <div class="index-last-d">
         <button class="art-collection font-size-24 background-color-f4Cf0a">Art Collection</button>
         <div class="index-last-map background-color-f4Cf0a">
-            <img class="w-100" src="images/index-img3.png"/>
+            <p class="map">
+                <iframe src="https://www.google.com/maps/d/embed?mid=1rOfW0KZmSIyhwaIfXd2sP47BH5_ZIBE&ehbc=2E312F" width="1466" height="789"></iframe>
+            </p>
         </div>
     </div>
 
