--- a/websrc/index.html
+++ b/websrc/index.html
@@ -66,10 +66,10 @@
     </div>
 
     <div class="index-last-d">
-        <button class="art-collection font-size-24 background-color-f4Cf0a">Art Collection</button>
+        <!-- <button class="art-collection font-size-24 background-color-f4Cf0a">Art Collection</button> -->
         <div class="index-last-map background-color-f4Cf0a">
             <p class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=150bsImcNATOVASRK9Iwf9V0FiNMXgio&ehbc=2E312F" width="1420" height="789"></iframe>
+                <iframe src="https://www.google.com/maps/d/embed?mid=150bsImcNATOVASRK9Iwf9V0FiNMXgio&ehbc=2E312F" width="1000" height="600" ></iframe>
             </p>
         </div>
     </div>
