--- a/websrc/index.html
+++ b/websrc/index.html
@@ -16,16 +16,16 @@
     <div class="index-top-d display-flex-center">
         <div class="index-top-info">
             <img class="main-logo" src="images/artistocial.png">
-            <div style="font-size: 16px;font-weight: 600;">Play, Explore, and Make Friends</div>
+            <div style="font-size: 20px;font-weight: 600;">Play, Explore, and Make Friends</div>
             <div class="circle-button-d">
                 <a class="circle-button " href="../websrc/artgallery/fronpage.html">GAME ENTRANCE</a>
                 <div class="cartoon-body"><img class="w-100" src="images/index-img1.png"></div>
             </div>
-            <div id="cartoon-right" class="cartoon">
+            <!-- <div id="cartoon-right" class="cartoon">
                 <img class="w-100" src="images/cartoonleft.png">
             </div>
             <div id="cartoon-left" class="cartoon">
-                <img class="w-100" src="images/cartoonright.png">
+                <img class="w-100" src="images/cartoonright.png"> -->
             </div>
         </div>
     </div>
