--- a/websrc/library.html
+++ b/websrc/library.html
@@ -15,10 +15,10 @@
     <div style="padding-left: 4em" class="library-title background-color-139E06">LIBRARIES IN BRISBANE</div>
 
     <div class="library-info">
-        <div>THE LIBRARY MAP</div>
+        <!-- <div>THE LIBRARY MAP</div> -->
         <div class="map-info">
-            <p>
-                <iframe src="https://www.google.com/maps/d/embed?mid=1NwF1n58Vpfmy0JpAR0JvgQGV8zFjMPU&ehbc=2E312F" width="1435" height="480"></iframe>
+            <p class="map">
+                <iframe src="https://www.google.com/maps/d/embed?mid=1NwF1n58Vpfmy0JpAR0JvgQGV8zFjMPU&ehbc=2E312F" width="1000" height="480"></iframe>
             </p>
         </div>
         <div class="search-map-d">
