--- a/websrc/artgallery/fronpage.html
+++ b/websrc/artgallery/fronpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="frontdoor-backg" lang="en">
+<html class="frontpage-backg" lang="en">
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,8 @@
 </head>
 
 
-<a href="instructions.html" target="_blank">
-    <img class="door" src="door.PNG"/>
-</a>
-
+<div class="doordiv">
+    <a href="instructions.html" target="_blank">
+        <img class="door" src="door.PNG"/>
+    </a>
+</div>
