--- a/websrc/artgallery/instructions.html
+++ b/websrc/artgallery/instructions.html
@@ -25,7 +25,7 @@
         You have $10,000 <br><br> Please browse through our gallery and <br> pick out the artwork that you like!</h3>
 </div>
 
-<a href="monalisa.html" target="">
+<a href="artwork.php" target="">
     <img class="arrowfins" src="arrow.png"/>
 </a>
 
