--- a/websrc/loginComplete.html
+++ b/websrc/loginComplete.html
@@ -5,6 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=JejuGothic&display=swap" rel="stylesheet" />
     <title>DECO1800/7180 Artistocial Signup Complete</title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
