--- a/websrc/loginComplete.html
+++ b/websrc/loginComplete.html
@@ -16,8 +16,8 @@
         <div class="top_style"></div>
         
         <div class="background_style"></div>
-        <div class="yes"><a href="artgallery/fronpage.html" class="word_size">Yes!! I am willing to!</a></div>
-        <div class="no"><a href="index.html" class="word_size">Sadly Turn Down :((((</a></div>
+        <div class="yes"><a href="artgallery/artwork.php" class="word_size">Yes!! I am willing to!</a></div>
+        <div class="no"><a href="index.php" class="word_size">Sadly Turn Down :((((</a></div>
         <span class="sign_up">SIGN UP Complete!</span>
             <img class="loginComLogo" src="images/artistocial.png">
         <div class="image_one">
