--- a/websrc/artgallery/instructions.html
+++ b/websrc/artgallery/instructions.html
@@ -5,27 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Art Gallery</title>
     <link rel="stylesheet" href="art gallery.css">
-    <!--<script src="RDSscript.js"></script>--> 
+    <script src="art gallery.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
 </head>
-
-<!--instructions image-->
-<!--<div>
-    <h3 class="instruction-text1">Welcome to the Artistocial Art Gallery <br>
-        <br><p class="instruction-text2"> You have $10,000 </p><br>
-        <br><p class="instruction-text3"> Please browse through our gallery and </p><br>
-        <p class="instruction-text4"> pick out the artwork that you like! </p><br>
-        <br><p class="instruction-text5"> Click on the painting to find out more about it </p></h3>
-</div>-->
 
 <div>
     <h3 class="instructions-text">Welcome to the Artisocial Art Gallery <br><br> 
         You have $10,000 <br><br> Please browse through our gallery and <br> pick out the artwork that you like!</h3>
 </div>
 
-<a href="monalisa.html" target="">
+<a href="artwork.php" target="">
     <img class="arrowfins" src="arrow.png"/>
 </a>
 
