art gallery clean up

--- a/websrc/artgallery/fronpage.html
+++ b/websrc/artgallery/fronpage.html
@@ -14,3 +14,9 @@
         <img class="door" src="door.PNG"/>
     </a>
 </div>
+
+<div>
+    <a href="http://localhost/grus_artistocial/websrc/">
+        <img class="exit-btn" src="exit.PNG"/>
+    </a>
+</div>
