change suffix from PNG to png for exit.png

--- a/websrc/artgallery/fronpage.html
+++ b/websrc/artgallery/fronpage.html
@@ -17,6 +17,6 @@
 
 <div>
     <a href="http://localhost/grus_artistocial/websrc/">
-        <img class="exit-btn" src="exit.PNG"/>
+        <img class="exit-btn" src="exit.png"/>
     </a>
 </div>
