fix exit button link

--- a/websrc/artgallery/fronpage.html
+++ b/websrc/artgallery/fronpage.html
@@ -16,7 +16,7 @@
 </div>
 
 <div>
-    <a href="http://localhost/grus_artistocial/websrc/">
+    <a href="../websrc/">
         <img class="exit-btn" src="exit.png"/>
     </a>
 </div>
