--- a/websrc/artgallery/fronpage.html
+++ b/websrc/artgallery/fronpage.html
@@ -10,7 +10,7 @@
 
 
 <div class="doordiv">
-    <a href="artwork.php" target="_blank">
+    <a href="artwork.php" target="_self">
         <img class="door" src="door.PNG"/>
     </a>
 </div>
